--- a/Images/app/build.gradle
+++ b/Images/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 
+    implementation 'androidx.palette:palette-ktx:1.0.0'
+
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
 
@@ -49,10 +51,7 @@ dependencies {
 
     testImplementation testFixtures(project(':core'))
 
-    testImplementation 'junit:junit:4.13'
-    testImplementation 'io.mockk:mockk:1.9.3'
     testImplementation 'org.koin:koin-test:2.1.5'
     testImplementation 'org.robolectric:robolectric:4.3.1'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5'
 }
