--- a/Images/build.gradle
+++ b/Images/build.gradle
@@ -1,9 +1,9 @@
 plugins {
-    id 'androidx.navigation.safeargs.kotlin' version '2.1.0' apply false
+    id 'androidx.navigation.safeargs.kotlin' version '2.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.3.72' apply false
-    id 'com.android.application' version '3.6.2' apply false
+    id 'com.android.application' version '3.6.3' apply false
+    id 'com.github.ben-manes.versions' version '0.28.0'
     id 'xyz.tynn.idea.fix' version '0.1.2'
-    id "com.github.plnice.canidropjetifier" version "0.5"
 }
 
 subprojects {
@@ -69,11 +69,23 @@ subprojects {
     }
 }
 
-wrapper {
-    gradleVersion '6.3'
-    distributionType Wrapper.DistributionType.ALL
-}
-
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+dependencyUpdates {
+    def isNonStable = { String version ->
+        ['alpha', 'beta', 'rc', 'cr', 'm', 'preview', 'b', 'ea', 'eap'].any {
+            version ==~ /(?i).*[.-]${it}[.\d-+]*.*/
+        }
+    }
+    rejectVersionIf {
+        isNonStable(it.candidate.version) && !isNonStable(it.currentVersion)
+    }
+    gradleReleaseChannel = 'current'
+}
+
+wrapper {
+    gradleVersion '6.4.1'
+    distributionType Wrapper.DistributionType.ALL
 }
