--- a/Images/core/build.gradle
+++ b/Images/core/build.gradle
@@ -4,4 +4,8 @@ apply plugin: 'java-test-fixtures'
 dependencies {
     api 'org.jetbrains.kotlin:kotlin-stdlib'
     api 'org.koin:koin-core:2.1.5'
+
+    testFixturesApi 'junit:junit:4.13'
+    testFixturesApi 'io.mockk:mockk:1.10.0'
+    testFixturesApi 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.7'
 }
