--- a/Images/app/build.gradle
+++ b/Images/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'androidx.navigation.safeargs.kotlin'
+apply plugin: 'kotlin-parcelize'
 
 android {
     defaultConfig {
@@ -11,7 +11,7 @@ android {
     buildTypes {
         debug {
             applicationIdSuffix '.debug'
-            versionNameSuffix '-debug'
+            versionNameSuffix '+debug'
         }
 
         release {
@@ -20,38 +20,39 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt')
         }
     }
-}
 
-kotlin {
-    androidExtensions {
-        experimental = true
+    buildFeatures {
+        viewBinding true
     }
 }
 
 dependencies {
     implementation project(':repo')
-    implementation 'org.koin:koin-androidx-viewmodel:2.1.5'
+    implementation 'io.insert-koin:koin-androidx-viewmodel:2.2.3'
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.3.0'
 
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
-    implementation 'com.github.chrisbanes:photoview:2.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'com.github.chrisbanes:photoview:2.2.0'
 
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
 
     implementation 'androidx.palette:palette-ktx:1.0.0'
 
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+
+    implementation 'xyz.tynn.hoppa:binding:0.2.1'
+    implementation 'xyz.tynn.hoppa:recycler:0.2.1'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     testImplementation testFixtures(project(':core'))
 
-    testImplementation 'org.koin:koin-test:2.1.5'
-    testImplementation 'org.robolectric:robolectric:4.3.1'
+    testImplementation 'io.insert-koin:koin-test:2.2.3'
+    testImplementation 'org.robolectric:robolectric:4.5.1'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
 }
