--- a/Images/build.gradle
+++ b/Images/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-    id 'androidx.navigation.safeargs.kotlin' version '2.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.3.72' apply false
-    id 'com.android.application' version '3.6.3' apply false
-    id 'com.github.ben-manes.versions' version '0.28.0'
+    id 'androidx.navigation.safeargs.kotlin' version '2.3.5' apply false
+    id 'org.jetbrains.kotlin.android' version '1.5.20' apply false
+    id 'com.android.application' version '4.2.2' apply false
+    id 'com.github.ben-manes.versions' version '0.39.0'
     id 'xyz.tynn.idea.fix' version '0.1.2'
 }
 
@@ -11,7 +11,6 @@ subprojects {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
-        jcenter()
     }
 
     tasks.withType(Test) {
@@ -39,16 +38,14 @@ subprojects {
     }
 
     plugins.withType(com.android.build.gradle.BasePlugin) {
-        project.apply {
-            plugin 'kotlin-android'
-        }
+        project.apply plugin: 'kotlin-android'
 
         android {
-            compileSdkVersion 29
+            compileSdkVersion 30
 
             defaultConfig {
                 minSdkVersion 21
-                targetSdkVersion 29
+                targetSdkVersion 30
 
                 testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
             }
@@ -86,6 +83,6 @@ dependencyUpdates {
 }
 
 wrapper {
-    gradleVersion '6.4.1'
+    gradleVersion '7.1'
     distributionType Wrapper.DistributionType.ALL
 }
