--- a/Images/core/build.gradle
+++ b/Images/core/build.gradle
@@ -3,9 +3,9 @@ apply plugin: 'java-test-fixtures'
 
 dependencies {
     api 'org.jetbrains.kotlin:kotlin-stdlib'
-    api 'org.koin:koin-core:2.1.5'
+    api 'io.insert-koin:koin-core:2.2.3'
 
-    testFixturesApi 'junit:junit:4.13'
-    testFixturesApi 'io.mockk:mockk:1.10.0'
-    testFixturesApi 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.7'
+    testFixturesApi 'junit:junit:4.13.2'
+    testFixturesApi 'io.mockk:mockk:1.12.0'
+    testFixturesApi 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0'
 }
